--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         <td>2018</td>
         <td>87%</td>
     </tr>
+       <tr>
+        <td>10<sup>th</sup>Grade</td>
+        <td>BDMI</td>
+        <td>2016</td>
+        <td>9.8</td>
+    </tr>
    </table>
 
    <h2>Internships</h2>
